Update translations. New: Farsi and Asturian

--- a/briar-android/src/main/res/values-br/strings.xml
+++ b/briar-android/src/main/res/values-br/strings.xml
@@ -39,18 +39,30 @@
   <string name="ongoing_notification_text">Touchit da zigeriñ Briar.</string>
   <plurals name="private_message_notification_text">
     <item quantity="one">Kemennadenn prevez nevez</item>
+    <item quantity="two">%d a gemennadennoù prevez nevez. </item>
+    <item quantity="few">%d a gemennadennoù prevez nevez. </item>
+    <item quantity="many">%d a gemennadennoù prevez nevez. </item>
     <item quantity="other">%d a gemennadennoù prevez nevez. </item>
   </plurals>
   <plurals name="group_message_notification_text">
     <item quantity="one">Kemennadenn strollad nevez.</item>
+    <item quantity="two">%d a gemennadennoù strollad nevez.</item>
+    <item quantity="few">%d a gemennadennoù strollad nevez.</item>
+    <item quantity="many">%d a gemennadennoù strollad nevez.</item>
     <item quantity="other">%d a gemennadennoù strollad nevez.</item>
   </plurals>
   <plurals name="forum_post_notification_text">
     <item quantity="one">Postadenn forom nevez.</item>
+    <item quantity="two">%da bostadennoù forom nevez.</item>
+    <item quantity="few">%da bostadennoù forom nevez.</item>
+    <item quantity="many">%da bostadennoù forom nevez.</item>
     <item quantity="other">%da bostadennoù forom nevez.</item>
   </plurals>
   <plurals name="blog_post_notification_text">
     <item quantity="one">Postadenn blog nevez.</item>
+    <item quantity="two">%d a bostadennoù blog nevez.</item>
+    <item quantity="few">%d a bostadennoù blog nevez.</item>
+    <item quantity="many">%d a bostadennoù blog nevez.</item>
     <item quantity="other">%d a bostadennoù blog nevez.</item>
   </plurals>
   <!--Misc-->
@@ -99,12 +111,18 @@
   <string name="introduction_response_error">Fazi en ur respont d\'an digoradur</string>
   <plurals name="introduction_notification_text">
     <item quantity="one">Darempred nevez ouzhpennet.</item>
+    <item quantity="two">%d a zarempredoù nevez ouzhpennet.</item>
+    <item quantity="few">%d a zarempredoù nevez ouzhpennet.</item>
+    <item quantity="many">%d a zarempredoù nevez ouzhpennet.</item>
     <item quantity="other">%d a zarempredoù nevez ouzhpennet.</item>
   </plurals>
   <!--Private Groups-->
   <string name="groups_created_by">Graet gant %s</string>
   <plurals name="messages">
     <item quantity="one">%d kemennadenn</item>
+    <item quantity="two">%d a gemennadennoù</item>
+    <item quantity="few">%d a gemennadennoù</item>
+    <item quantity="many">%d a gemennadennoù</item>
     <item quantity="other">%d a gemennadennoù</item>
   </plurals>
   <string name="groups_group_is_empty">Leun eo ar strollad-mañ</string>
@@ -149,5 +167,4 @@
   <!--Sign Out-->
   <!--Screen Filters & Tapjacking-->
   <!--Permission Requests-->
-  <!--Low Memory Notification-->
 </resources>
