--- a/briar-android/src/main/res/values-zh-rCN/strings.xml
+++ b/briar-android/src/main/res/values-zh-rCN/strings.xml
@@ -29,17 +29,22 @@
   <string name="sign_in_button">登录</string>
   <string name="forgotten_password">我忘记了密码</string>
   <string name="dialog_title_lost_password">忘记密码</string>
-  <string name="dialog_message_lost_password">您的 Briar 账号被加密储存在您的设备上，而非云端，因此我们无法重置您的密码。您是否希望删除帐号，重新开始？\n\n注意：您的身份、联系人和消息将会永久遗失。</string>
+  <string name="dialog_message_lost_password">您的 Briar 账号被加密储存在您的设备上，而非云端，因此我们无法重置您的密码。您是否希望删除帐号，重新开始？\n\n注意：您的身份、联系人和消息将会永久丢失。</string>
   <string name="startup_failed_notification_title">Briar 无法启动</string>
   <string name="startup_failed_notification_text">点击查看更多信息。</string>
   <string name="startup_failed_activity_title">Briar 启动失败</string>
+  <string name="startup_failed_db_error">由于一些原因，Briar 数据库已损坏并且无法修复。您的帐户、数据和所有联系人已经丢失。不幸的是，您需要重新安装 Briar 或者在提示输入密码时选择“我忘记了密码”以重新创建一个 Briar 帐户。</string>
+  <string name="startup_failed_data_too_old_error">您的帐户由旧版本应用创建，无法在此版本上打开。您需要重新安装旧版本应用或在提示输入密码时选择“我忘记了密码”以创建新帐户。</string>
   <string name="startup_failed_data_too_new_error">该应用版本过旧。请升级至最新版本并重试。</string>
   <string name="startup_failed_service_error">Briar 无法开启一个必要插件。通常情况下，重新安装 Briar 可以解决这个问题。但是由于 Briar 并不采用中央服务器来储存您的数据，您将丢失您的账号和与您的账号相关的一切数据。</string>
   <plurals name="expiry_warning">
-    <item quantity="other">这是 Briar 的一个测试版本。您的帐户将在 %d 天后过期，且无法继续使用。</item>
+    <item quantity="other">这是 Briar 的一个测试版本。您的帐户将在 %d 天后过期，且逾期后无法继续使用。</item>
   </plurals>
   <string name="expiry_update">测试到期时间延长，您的帐户将在 %d 天后过期。</string>
   <string name="expiry_date_reached">本软件已过期。\n感谢您的测试！</string>
+  <string name="download_briar">如想继续使用 Briar，请下载 1.0 版。</string>
+  <string name="create_new_account">你需要创建一个新账户，但不能使用相同的昵称。</string>
+  <string name="download_briar_button">下载 Briar 1.0</string>
   <string name="startup_open_database">正在解密数据库……</string>
   <string name="startup_migrate_database">正在升级数据库……</string>
   <!--Navigation Drawer-->
@@ -94,11 +99,13 @@
   <string name="help">帮助</string>
   <string name="sorry">抱歉</string>
   <!--Contacts and Private Conversations-->
-  <string name="date_no_private_messages">没有消息。</string>
+  <string name="no_contacts">没有联系人\n\n点击 + 号添加</string>
+  <string name="date_no_private_messages">无消息。</string>
+  <string name="no_private_messages">没有消息</string>
   <string name="message_hint">键入信息</string>
   <string name="delete_contact">删除联系人</string>
   <string name="dialog_title_delete_contact">确认删除联系人</string>
-  <string name="dialog_message_delete_contact">确认要删除该联系人和与之交流的所有消息吗？</string>
+  <string name="dialog_message_delete_contact">确认要删除该联系人和所有聊天记录吗？</string>
   <string name="contact_deleted_toast">联系人已删除</string>
   <!--Adding Contacts-->
   <string name="add_contact_title">添加联系人</string>
@@ -112,7 +119,7 @@
   <string name="contact_already_exists">联系人 %s 已存在</string>
   <string name="contact_exchange_failed">联系人交换失败</string>
   <string name="qr_code_invalid">二维码无效</string>
-  <string name="qr_code_unsupported">您正在扫描的是来自 %s 版旧版本的二维码，目前不再支持。\n\n请确保你们两人都在运行最新版本并重试。</string>
+  <string name="qr_code_unsupported">您正在扫描的是来自旧版本 %s 版的二维码，目前不再支持。\n\n请确保你们两人都在运行最新版本并重试。</string>
   <string name="camera_error">摄像头出错</string>
   <string name="connecting_to_device">正在连接至设备\u2026</string>
   <string name="authenticating_with_device">正在验证设备\u2026</string>
@@ -122,6 +129,7 @@
   <string name="introduction_onboarding_title">介绍您的联系人</string>
   <string name="introduction_onboarding_text">您可以互相介绍联系人，这样他们可以直接在 Briar 上建立联系而不必亲自见面。</string>
   <string name="introduction_activity_title">选择联系人</string>
+  <string name="introduction_not_possible">您当前正给这些联系人交换名片。请先等待交换完成。如果您或您的好友很少在线，那需要花些时间。</string>
   <string name="introduction_message_title">介绍联系人</string>
   <string name="introduction_message_hint">添加一句话 (选填)</string>
   <string name="introduction_button">完成介绍</string>
@@ -352,5 +360,4 @@
   <string name="permission_camera_request_body">Briar 需要获得相机权限以扫描二维码。</string>
   <string name="permission_camera_denied_body">您拒绝了相机权限，而添加联系人需要使用相机\n\n请考虑授予相机权限。</string>
   <string name="permission_camera_denied_toast">未授予相机权限</string>
-  <!--Low Memory Notification-->
 </resources>
